# OneStop-Eye-Movements

./: .buildinfo  .gitignore  .readthedocs.yaml  README.md  data_variables.html  directory_structure.html  download_data_files.py  environment.yml  genindex.html  index.html  known_issues.html  metadata_variables.html  objects.inv  preprocessing_analyses.html  pyproject.toml  rename_files.py  search.html  searchindex.js  technical_setup.html  variables.html
.github/workflows/: main.yml  sphinx.yml  sphinx_to_pages.yml
_sources/: directory_structure.md.txt  index.md.txt  known_issues.md.txt  preprocessing_analyses.md.txt  technical_setup.md.txt  variables.md.txt
_sources/variables/: EB_programs.md.txt  documentation.md.txt  index.rst.txt  syntactic_annotations.md
data/: .gitignore  full_report.csv  questionnaire.json  session_summary.csv  survey_responses.json
data_preprocessing/: compute_session_summary.py  config.py  process_sr_report.py  utils.py
docs/: conf.py  docs_environment.yml  index.rst  readme_link.rst  requirements.txt
docs/source/: conf.py  data_variables.md  directory_structure.md  index.md  index.rst  known_issues.md  metadata_variables.md  preprocessing_analyses.md  variables.md
docs/variables/: data_variables.md
images/: images.pptx
l2_data/: .gitignore  full_report.csv  questionnaire.json  session_summary.csv  subjects_not_in_metadata.csv  subjects_not_in_trial_report.csv  validation_error.csv
metadata/: .gitignore  questionnaire.json  validation_error.csv
onestop/: .gitignore  analyses.ipynb  compute_session_summary.py  config.py  download_data_files.py  edf2asc_wrapper.py  fixed_trials_20241217.csv  l2_analyses.ipynb  preprocess.py  process_sr_report.py  utils.py
onestop/linear_mm_utils/: calc_means_main.py  utils.py
onestop/mixed_effects_wrapper/: calc_means_main.py  julia_linear_mm.py  utils.py
onestop/other_datasets_analyses/: other_datasets_analyses.ipynb  other_datasets_utils.py
onestop/scripts/: copy_edf.py  edf2asc_wrapper.py  extract_validation_error.py  rename_files.py  validate_unknown_sr_features.ipynb
onestop_paper_analyses/: environment.yml  onestop_paper_analyses.ipynb  paper_analyses.ipynb
onestop_paper_analyses/drift_analysis/: README.md  final_drift_annotations.csv  stats.ipynb
onestop_paper_analyses/line_assignment_analysis/: README.md  fixation_annotations.csv  stats.ipynb
onestop_paper_analyses/line_assignment_annotations/: README.md
readme_images/: README.md
src/: .gitignore  analyses.ipynb  compute_session_summary.py  config.py  edf2asc_wrapper.py  fix_ias.ipynb  ia_all_data_based_validations.ipynb  organize_sessions.ipynb  preprocess.py  preprocessing.py  process_eye_movements.py  process_sr_report.py  setup.py  utils.py
variables/: EB_programs.html  data_variables.html  documentation.html  index.html  known_issues.html  language_models.html  metadata_variables.html  syntactic_annotations.html
(+20 files in other folders)
