[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "OneStop-Eye-Movements"
version = "0.1.0"
description = "Code for the analyses in the paper 'OneStop: A 360-Participant English Eye-Tracking Dataset with Different Reading Regimess'"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License", # TODO temporary, make sure inline with license in README
  "Operating System :: OS Independent",
]

dependencies = [
  # TODO add dependencies
]

[project.urls]
Homepage = "https://github.com/lacclab/OneStop-Eye-Movements"
repository = "https://github.com/lacclab/OneStop-Eye-Movements"
"Bug Tracker" = "https://github.com/lacclab/OneStop-Eye-Movements/issues"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src", "src.linear_mm_utils"]