[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "onestop_eye_movements"
version = "1.0.0"
description = "Code for the paper 'OneStop: A 360-Participant English Eye Tracking Dataset with Different Reading Regimes'"
readme = "README.md"
requires-python = ">=3.7"
license = "CC-BY-4.0"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: Other/Proprietary License", # For Creative Commons licenses
  "Operating System :: OS Independent",
]


[project.urls]
Homepage = "https://github.com/lacclab/OneStop-Eye-Movements"
repository = "https://github.com/lacclab/OneStop-Eye-Movements"
"Bug Tracker" = "https://github.com/lacclab/OneStop-Eye-Movements/issues"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = [
  "data_preprocessing",
  'onestop_paper_analyses',
  "onestop_paper_analyses.utils.mixed_effects_wrapper",
]
